2013-08-09 Jens Thoms Toerring    <jt@toerring.de>

	* lib/tabfolder.c: Problem with setting graphic properties
	of the tab riders infividually ad all at once pointed out
	by Rob Carpenter hopefully fixed.

	* lib/objects.c: Slow down of fl_unfreeze_form() due to the
	fli_recalc_interactions function noticed by Rob Carpenter
	whle not completely eliminated hopefully made less noticable.

	* fd2ps/psobj.c: Support for FL_SPINNER added

	* fdesign: Inconsistencies in handling of path names pointed
	out by Donato Lorenzo López hopefully fixed.

2013-01-05 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_select.c: Cutting/copying whole groups didn't
	work properly, now only the members of the group get
	copied/cut, but not the property of belonging to a group.

2013-01-04 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_select.c: Raising and lowering objects
	didn't work properly

	* fdesign/fd_control.c: Store and reset button state
	before and after test.

	* autogen.sh: Cleanup

2013-01-03 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_select.c: Ungrouping didn't work properly
	since also all members of the group got deleted

	*fdesign/fd_main.c: As proposed by Michal Szymanski a
	left double clock on an object brings up the attribute
	dialog, while deleting is done via right double click.

	* lib/fselect.c: if a default file is passed to
	fl_show_file_selctor() it's now shown centered in the
	browser (and you don't have to strip the path from the
	file name for that t work)

	* lib/objects.c: Adding a composite object to a reopened
	group didn't work, hopefully fixed.

2013-01-02 Jens Thoms Toerring    <jt@toerring.de>

	* lib/input.c: New function fl_set_input_mode() added
	according to proposal by Serge Bromow.

	* lib/objects.c: Don't show tooltip while object is de-
	activated as proposed by Serge Bromow.

	* fdesign/fd_main.c, fd_names.c: as Serge Bromow noticed
	fdesign didn't ork correctly in '-convert' mode when lots