@@ -1,3 +1,8 @@
+2013-08-10 Jens Thoms Toerring    <jt@toerring.de>
+
+	* fdesign: Included Paul Nichelsons patch for reading
+	.fd files with xyplot objects.
+
 2013-08-09 Jens Thoms Toerring    <jt@toerring.de>
 
 	* lib/tabfolder.c: Problem with setting graphic properties
